<resources>
    <string name="title_direct">Direct</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="app_name">Brief</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_accounts">Accounts</string>
    <string name="image">Image</string>
    <string name="title_brief">Brief</string>
    <string name="title_direct_send">Direct send</string>
    <string name="title_email">Email</string>
    <string name="title_sms">SMS</string>
    <string name="title_sms_send">SMS send</string>
    <string name="title_locker">Locker</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_news">RSS feeds</string>
    <string name="title_phone">Phone</string>
    <string name="title_d2d">Device 2 Device</string>
    <string name="title_notes">Notes</string>
    <string name="title_logs">Logs</string>
    <string name="title_new_action">New action</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_add">Add</string>
    <string name="label_search">Search</string>
    <string name="label_help">Help</string>
    <string name="label_open">Open</string>
    <string name="label_new">New</string>
    <string name="label_select">Select</string>
    <string name="label_home">Home</string>
    <string name="label_username">Add Email</string>
    <string name="label_next">Next</string>
    <string name="label_back">Back</string>
    <string name="label_save">Save</string>
    <string name="label_update">Update</string>
    <string name="label_set">Set</string>
    <string name="label_start">Start</string>
    <string name="label_stop">Stop</string>
    <string name="label_format">Format</string>
    <string name="label_send_to">Send to</string>
    <string name="label_reply">Reply</string>
    <string name="label_forward">Forward</string>
    <string name="label_send">Send</string>
    <string name="label_hide">Hide</string>
    <string name="label_delete">Delete</string>
    <string name="label_safe_delete">Safe Delete</string>
    <string name="label_network">Network</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_files">Files</string>
    <string name="label_calls">Calls</string>
    <string name="label_camera">Camera</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_remove">Remove</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_plus_member">Plus member</string>
    <string name="label_working">Working</string>
    <string name="label_gotop">Go Top</string>
    <string name="label_close">Close</string>
    <string name="label_options">Options</string>
    <string name="label_storage">Storage</string>
    <string name="label_locked_expired">Sorry, this app is old and has expired.  Download the latest version to continue using Brief.</string>
    <string name="label_firsttime_head">Welcome to Brief</string>
    <string name="label_firsttime_text">First time load, one moment</string>
    <string name="layout_bottom_up">Layout Bottom up</string>
     <string name="layout_top_down">Layout Top down</string>
    <string name="title_brief_sub">Overview of all data</string>
    <string name="title_direct_send_sub">P2P device connect</string>
    <string name="title_email_sub">Send and receive email</string>
    <string name="title_sms_sub">Text messages from your device</string>
    <string name="title_files_sub">Device file manager</string>
    <string name="title_news_sub">RSS news feeds and data</string>
    <string name="title_phone_sub">Phone calls made and received</string>
    <string name="title_notes_sub">Keep track with notes</string>
    <string name="title_logs_sub">Developer option</string>
    <string name="title_d2d_sub">Secure send to nearby devices</string>
    <string name="notify_from">From</string>
    <string name="notify_mark_read">Ok read</string>
    <string name="no_sd_card_access">SD Card is locked for access, unlock to use brief</string>
    <string name="unknown">Unknown</string>
    <string name="eicon_back">Back</string>
    <string name="action_paste">Paste</string>
    <string name="copied_to_clip">Copied to clipboard</string>
    <string name="copy_to_clip">Copy to clipboard</string>
    <string name="label_loading">Loading</string>
    <string name="label_retry">Retry</string>
    <string name="label_note">Note</string>
    <string name="ok">OK</string>
    <string name="notify_new_messages">new messages</string>
    <string name="menu_label">Menu</string>
    <string name="files_menu_options">Files options</string>
    <string name="bsend_menu_options">Sending</string>
    <string name="note_menu_options">Note options</string>
    <string name="note_menu_edit">Edit</string>
    <string name="menu_send_email">Send as email</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open_file">Open file</string>
    <string name="news_menu_options">News options</string>
    <string name="file_menu_options">File options</string>
    <string name="email_menu_options">Email options</string>
    <string name="menu_reply">Reply to</string>
    <string name="menu_save_note">Save as note</string>
    <string name="sms_menu_options">SMS options</string>
    <string name="locker_empty_head">Empty Locker</string>
    <string name="locker_empty_text">To add files to the Locker, find them in the File Manager, select and click LOCK</string>
    <string name="locker_welcome">Welcome to the file Locker</string>
    <string name="locker_desc">The locker allows you to encrypt files on this device to ensure private access only</string>
    <string name="locker_desc_short">Secure Encrypted files</string>
    <string name="locker_high_desc">Enter a pass code to be entered before able to access files in the locker</string>
    <string name="locker_high_extra">Enter 3 to 12 digits in the field below (eg. 123 , 9876, 6284937290)</string>
    <string name="locker_create_with">Create locker with pass code</string>
    <string name="locker_login_now">Open locker</string>
     <string name="locker_invalid_code">Invalid pass code</string>
     <string name="locker_btn_lock_now">Lock Files now</string>
    <string name="locker_btn_data_view">View</string>
    <string name="locker_btn_data_open">Open</string>
    <string name="locker_btn_data_unlock">Unlock</string>
    <string name="locker_display_path">/locker</string>
    <string name="locker_Adding_files">Adding files to locker</string>
    <string name="locker_Adding_files_cannot">Cannot lock files required by Brief</string>
    <string name="locker_Adding_files_will_not">Will not lock</string>
    <string name="locker_unlocking">Unlocking</string>
    <string name="file_invalid">Invalid file, not on storage</string>
    <string name="readme_file_name">READ_ME</string>
    <string name="readme_file_text">Do not make any changes to any files here, doing so will cause damage</string>
    <string name="account_email_delete">Delete Email account</string>
    <string name="account_email_delete_confirm">Are you sure you wish to delete this email account?</string>
    <string name="account_add_googlemail">Add Email hosted with Google</string>
    <string name="settings_termsuse">Legal</string>
    <string name="settings_head_visual">Theme</string>
    <string name="settings_head_general">General Settings</string>
    <string name="settings_style">Style</string>
    <string name="settings_style_pods">Colour pods</string>
    <string name="settings_style_colors">Colours</string>
    <string name="settings_style_plain">Plain</string>
    <string name="settings_font_typeface">Text style</string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_notify_tab">Notify</string>
    <string name="settings_alerts">Notify alerts</string>
    <string name="settings_alert_sms">When SMS received</string>
    <string name="settings_alert_email">When Email received</string>
    <string name="settings_alert_news">When filtered News received</string>
    <string name="settings_alert_sound">Play default sound</string>
    <string name="settings_alert_vibrate">Vibrate device</string>
    <string name="settings_alert_repeat_head">After first alert, if more new alerts</string>
    <string name="settings_alert_emails">Plain</string>
    <string name="settings_brief_unlock_desc">This will open Brief when you unlock your device, if you do not use Brief as the main app on your device, do not enable this feature</string>
    <string name="settings_show_in_brief">Show in Brief</string>
    <string name="settings_proxy_check">Use Proxy server</string>
    <string name="settings_proxy_desc">Send all network communications using a Proxy server</string>
    <string name="settings_proxy_ip">IP Address ( i.e. 192.168.0.250 )</string>
    <string name="settings_proxy_ip_port">Port ( i.e. 8090 )</string>
    <string name="settings_proxy_auth_check">Requires Authentication</string>
    <string name="settings_proxy_user">Username</string>
    <string name="settings_proxy_password">Password</string>
    <string name="settings_proxy_emsg_check">check the following: </string>
    <string name="settings_proxy_emsg_ip">valid IP Address</string>
    <string name="settings_proxy_emsg_port">valid network Port</string>
    <string name="settings_data">Archive and Data</string>
    <string name="settings_alert_time_quiet">No alerts</string>
    <string name="settings_alert_time_vibrate">Allow vibrate</string>
    <string name="settings_alert_time_both">Allow vibrate and sound</string>
    <string name="contacts_resync">Re sync contacts</string>
    <string name="accounts_added">Account added</string>
    <string name="accounts_add_username">User name</string>
    <string name="accounts_add_password">Password</string>
    <string name="label_about">About</string>
    <string name="voip_call">voip call</string>
    <string name="label_email">Email</string>
    <string name="label_email_server_type">Server type</string>
    <string name="label_incoming_server">Incoming SMTP Server</string>
    <string name="label_outgoing_server">Outgoing Server</string>
    <string name="label_server_address">Address/IP</string>
    <string name="label_port_incoming">Port</string>
    <string name="label_port_outgoing">Port</string>
    <string name="label_use_email_for_username">Use email address as login username</string>
    <string name="label_login_details">Login details</string>
    <string name="info_login_store">login details are stored encrypted only on this device</string>
    <string name="email_ssl">SSL</string>
    <string name="email_tls">TLS</string>
    <string name="email_use_pop">POP</string>
    <string name="email_use_imap">IMAP</string>
    <string name="email_enc_none">None</string>
    <string name="email_encrypt">Encryption</string>
    <string name="email_testing_connection">Testing connection</string>
    <string name="email_testing_failed">Failed connection</string>
    <string name="hint_email_address">email@address.com</string>
    <string name="hint_server_domain">server.domain.com</string>
    <string name="hint_port_pop">110</string>
    <string name="hint_port_smtp">25</string>
	<string name="txt_add">Add</string>
	<string name="txt_sound">Sound</string>
	<string name="txt_photo">Photo</string>
	<string name="txt_file">File</string>
    <string name="orderby_name_asc">Order by name ascending</string>
    <string name="orderby_name_desc">Order by name descending</string>
    <string name="orderby_date_asc">Order by date ascending</string>
    <string name="orderby_date_desc">Order by date descending</string>
    <string name="showhide_system_files">Show / Hide system files</string>
</resources>