<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/actionbar_general"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_search"
        app:showAsAction="always"
        android:icon="@drawable/action_search"
        android:title="@string/label_search"/>
    <item
        android:id="@+id/action_help"
        app:showAsAction="always"
        android:title="@string/label_help"
        android:icon="@drawable/action_help"
        />
    <!--
    <item
        android:id="@+id/action_data"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/device_access_storage"
        android:title="@string/settings_data"/>
    -->
    <item
        android:id="@+id/action_more"
        app:showAsAction="always"
        android:title="@string/label_options"
        android:icon="@drawable/menu_options"
        >
        <menu>
            <item
                android:id="@+id/action_network"
                app:showAsAction="collapseActionView"
                android:title="@string/label_network"
                android:icon="@drawable/device_proxy"
                />
            <item
                android:id="@id/action_help"
                app:showAsAction="collapseActionView"
                android:title="@string/label_help"
                android:icon="@drawable/action_help"
                />
            <item
                android:id="@+id/action_about"
                app:showAsAction="never"
                android:title="@string/label_about"
                android:icon="@drawable/i_brief"
                />
            <item
                android:id="@+id/action_legal"
                app:showAsAction="never"
                android:title="@string/settings_termsuse"
                android:icon="@drawable/navigation_accept"
                />
        </menu>
    </item>

</menu>