<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"

  >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:scrollbars="vertical"
    android:orientation="vertical"
    >
<LinearLayout  
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white_alpha"
    android:scrollbars="vertical"
    android:padding="10dp"
    >
    <RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
    	<run.brief.b.bButton 
	    android:id="@+id/account_email_btn_back"
	    android:text="@string/label_back" 
	    android:layout_alignParentLeft="true"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableRight="@drawable/navigation_previous_item"
	    />
    	<run.brief.b.bButton 
	    android:id="@+id/account_email_btn_next"
	    android:text="@string/label_next" 
	    android:layout_alignParentRight="true"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableLeft="@drawable/navigation_next_item"
	    />

    	<run.brief.b.bButton 
	    android:id="@+id/account_email_btn_save"
	    android:text="@string/label_save" 
	    android:layout_alignParentRight="true"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableLeft="@drawable/content_save"
	    />
    </RelativeLayout>
	<TextView 
		android:id="@+id/alert_message"
		android:layout_width="wrap_content"
		android:layout_height="30dp"
		style="@style/field_error"
        android:layout_gravity="center_horizontal"
		/>
</LinearLayout>
<LinearLayout  
    android:id="@+id/layout_email_add_choose"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white_alpha"
    android:scrollbars="vertical"
    android:layout_gravity="center"
     >
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<TextView
            android:id="@+id/account_email_f_title"
		    style="@style/field_title"
		    android:text="@string/label_email"
		    />

		<EditText
		    android:id="@+id/account_field_email"
		    style="@style/field_edit_single"
		    android:hint="@string/hint_email_address"
		    android:inputType="textNoSuggestions|textEmailAddress" />
	</LinearLayout>
</LinearLayout>
<LinearLayout  
    android:id="@+id/layout_email_add_outgoing"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white_alpha"
    android:scrollbars="vertical"
    android:visibility="gone"
     >
	<TextView
        android:id="@+id/account_email_f_heading"
	    style="@style/heading"
	    android:text="@string/label_outgoing_server"
	    />
	<LinearLayout
	    android:id="@+id/account_email_outgoing"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<TextView
            android:id="@+id/account_email_f_ip"
		    style="@style/field_title"
		    android:text="@string/label_server_address"
		    />
		<EditText
		    android:id="@+id/account_field_server_outgoing"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/hint_server_domain"
		    android:inputType="textNoSuggestions" />

	</LinearLayout>
	<TextView 
	    android:id="@+id/account_error_outgoing_server" 
	    style="@style/field_error"
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:paddingLeft="100dp"
	    />
	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/account_email_incoming_outgoing"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<TextView
            android:id="@+id/account_email_f_outport"
		    style="@style/field_title"
		    android:text="@string/label_port_outgoing"
		    />
		<EditText
		    style="@style/field_edit_single"
		    android:id="@+id/account_field_port_outgoing"
		    android:layout_width="100dp"
		    android:hint="@string/hint_port_smtp"
		    android:inputType="number" />
	</LinearLayout>
	<TextView 
	    android:id="@+id/account_error_outgoing_port" 
	    style="@style/field_error"
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:paddingLeft="100dp"
	    />
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<TextView
            android:id="@+id/account_email_f_encrypt"
		    style="@style/field_title"
		    android:text="@string/email_encrypt"
		    />
		<RadioGroup
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/account_radio_outgoing_enc_none"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/email_enc_none"
		        android:paddingTop="2dp"
		        />
		    <RadioButton android:id="@+id/account_radio_outgoing_enc_ssl"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/email_ssl"
		        />
		    <RadioButton android:id="@+id/account_radio_outgoing_enc_tls"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:text="@string/email_tls"
		        />
		</RadioGroup>
	</LinearLayout>
	<TextView
        android:id="@+id/account_email_f_incoming"
	    style="@style/heading"
	    android:text="@string/label_incoming_server"
	    />
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<TextView
            android:id="@+id/account_email_f_inc_type"
		    style="@style/field_title"
		    android:text="@string/label_email_server_type"
		        android:paddingTop="2dp"
		    />
		<RadioGroup
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/account_radio_incoming_use_imap"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/email_use_imap"
		        />
		    <RadioButton android:id="@+id/account_radio_incoming_use_pop"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/email_use_pop"
		        />
		</RadioGroup>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/account_email_incoming"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<TextView
            android:id="@+id/account_email_f_add_ip"
		    style="@style/field_title"
		    android:text="@string/label_server_address"
		    />
		<EditText
		    android:id="@+id/account_field_server_incoming"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/hint_server_domain"
		    android:inputType="textNoSuggestions" />
	</LinearLayout>
	<TextView 
	    android:id="@+id/account_error_incoming_server" 
	    style="@style/field_error"
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:paddingLeft="100dp"
	    />
	<LinearLayout
		android:orientation="horizontal"
		android:id="@+id/account_email_incoming_port"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<TextView
            android:id="@+id/account_email_f_inport"
		    style="@style/field_title"
		    android:text="@string/label_port_incoming"
		    />
		<EditText
		    style="@style/field_edit_single"
		    android:id="@+id/account_field_port_incoming"
		    android:layout_width="100dp"
		    android:hint="@string/hint_port_pop"
		    android:inputType="number" />
	</LinearLayout>
	<TextView 
	    android:id="@+id/account_error_incoming_port" 
	    style="@style/field_error"
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:paddingLeft="100dp"
	    />
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<TextView
            android:id="@+id/account_email_f_enc"
		    style="@style/field_title"
		    android:text="@string/email_encrypt"
		    android:paddingTop="2dp"
		    />
		<RadioGroup
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/account_radio_incoming_enc_none"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/email_enc_none"
		        />
		    <RadioButton android:id="@+id/account_radio_incoming_enc_ssl"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/email_ssl"
		        />
		    <RadioButton android:id="@+id/account_radio_incoming_enc_tls"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:text="@string/email_tls"
		        />
		</RadioGroup>
	</LinearLayout>


</LinearLayout>
<LinearLayout  
    android:id="@+id/layout_email_add_login" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white_alpha"
    android:scrollbars="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:layout_gravity="center"
    android:visibility="gone"
    android:layout_marginBottom="50dp"
     >
    <TextView
        android:id="@+id/account_email_f_login"
	    style="@style/heading"
	    android:text="@string/label_login_details"
	    />
	<CheckBox
	    android:id="@+id/account_use_email_check"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/label_use_email_for_username"
	    android:checked="true"
	    />
	<EditText
	    style="@style/field_edit_single"
	    android:id="@+id/account_field_login_user"
	    android:hint="@string/accounts_add_username"
	    android:layout_width="match_parent"
	    android:layout_margin="10dp"
	    android:inputType="textNoSuggestions|textEmailAddress"
	    />
	<EditText
	    style="@style/field_edit_single"
	    android:id="@+id/account_field_login_password"
	    android:hint="@string/accounts_add_password"
	    android:layout_width="match_parent"
	    android:layout_margin="10dp"
	    android:inputType="textPassword"
	    />
		<TextView
            android:id="@+id/account_email_f_login_store"
		    android:text="@string/info_login_store"
		    style="@style/info_text"
		    />
</LinearLayout>
<LinearLayout  
    android:id="@+id/layout_email_add_confirm" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:visibility="gone"
     >
	<LinearLayout 
	    android:id="@+id/layout_email_add_confirm_test"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
	    >
		<ProgressBar
		    android:id="@+id/layout_email_progress_bar"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dp" />
	    <TextView
            android:id="@+id/account_email_f_test"
		    android:text="@string/email_testing_connection"
		    style="@style/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
		    />
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/layout_email_add_confirm_failed"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	    android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
	    >
		<TextView
            android:id="@+id/account_email_f_test_fail"
		    android:text="@string/email_testing_failed"
		    style="@style/heading"
		    />
		<TextView

		    android:id="@+id/layout_email_add_confirm_failed_message"
		    android:text=""
		    style="@style/info_text"
            android:autoLink="web"
		    />
	</LinearLayout>
	<LinearLayout  
	    android:id="@+id/layout_email_add_confirm_sucess" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:visibility="gone"
		android:layout_gravity="center_horizontal"
		android:gravity="center_horizontal"
	     >
		<TextView
            android:id="@+id/account_email_f_test_add"
		    android:text="@string/accounts_added"
		    style="@style/info_text"

		    />
		 <run.brief.b.bButton 
		    android:id="@+id/account_email_btn_finish"
		    android:text="@string/label_close"
		    android:layout_width="150dp"
			android:layout_height="wrap_content"

		    />
	</LinearLayout>
</LinearLayout>


</LinearLayout>

</ScrollView>