<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/actionbar_list"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/voip_call"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/i_phone"
        android:title="@string/voip_call"/>
    <item
        android:id="@+id/lookLogFile"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/navigation_refresh"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/clearLogFile"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/action_search"
        android:title="@string/label_search"/>
    <item
        android:id="@+id/lookUserGuide"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/bugReport"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>