<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/actionbar_list"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_contacts_add_new"
        android:orderInCategory="1"
        android:menuCategory="container"
        app:showAsAction="always"
        android:icon="@drawable/social_add_person"
        android:title="@string/txt_add"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        android:menuCategory="container"
        app:showAsAction="always"
        android:icon="@drawable/action_search"
        android:title="@string/label_search"/>
    <item
        android:id="@+id/action_resync_contacts"
        app:showAsAction="collapseActionView"
        android:icon="@drawable/navigation_refresh"
        android:title="@string/contacts_resync"/>
    <!-- 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_accounts"/>
    -->
</menu>